# flowdrop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  CHANGELOG-0.0.1--0.0.49.md  CHANGELOG.md  DOCKER.md  Dockerfile  LICENSE  QUICK_START.md  README.md  docker-compose.yml  env.example  netlify.toml  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
.github/workflows/: api-docs.yml  api-lint.yml  docker-publish-api-docs.yml  docker-publish-docs.yml  docker-publish.yml
.husky/: pre-commit
api/: README.md  bundled.yaml  openapi.yaml  redocly.yaml
api/components/: responses.yaml
apps/example-server-agentspec/: .env.example  .gitignore  README.md  pyproject.toml
apps/example-server-agentspec/src/agentspec_server/: __init__.py  config.py  main.py
apps/example-server-agentspec/src/agentspec_server/data/: agents.py  sample_flows.py  tools.py
apps/example-server-agentspec/src/agentspec_server/engine/: execution_runner.py  execution_store.py  llm_provider.py
apps/example-server-agentspec/src/agentspec_server/routes/: discovery.py  executions.py  flows.py  health.py
docs/: component-hierarchy.md  config-schema-special-properties.md  configEdit-feature.md  interrupt-feature.md  settings-integration.md  theming.md  workflow-format-standards-research.md
schemas/: README.md  config-property.schema.json  config-schema.schema.json  node-metadata.schema.json  node-port.schema.json  port-config.schema.json
scripts/: generate-schemas.js
src/: app.css  hooks.client.ts  hooks.server.ts
tests/: setup.ts
(+848 files in other folders)
